refactor: enhance RulebookAnalyzerTest with improved rulebook parsing tests and streamlined entry creation methods